fix alignment

--- a/src/components/features/about/About.module.scss
+++ b/src/components/features/about/About.module.scss
@@ -35,7 +35,7 @@
 
       > .date {
         margin: 0;
-        line-height: 34px;
+        line-height: 28px;
         text-align: right;
         @extend .uppercase;
         color: $blue;
